add names in h2

--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -4,8 +4,9 @@
    "cell_type": "markdown",
    "source": [
     "# Laboratório 1\r\n",
-    "Henrique Martinez Rocamora (9836332)\r\n",
-    "Flávio Ferreira Menten ()"
+    "\r\n",
+    "## Henrique Martinez Rocamora (9836332)\r\n",
+    "## Flávio Ferreira Menten ()"
    ],
    "metadata": {}
   },
