--- a/lab1/lab1.ipynb
+++ b/lab1/lab1.ipynb
@@ -8,8 +8,8 @@
     "\r\n",
     "## Henrique Martinez Rocamora (9836332)\r\n",
     "## Flávio Ferreira Menten (9836691)\r\n",
-    "## Diogo de Paula Vieira\r\n",
-    "## Pedro Henrique Campos Dini"
+    "## Diogo de Paula Vieira (9836200)\r\n",
+    "## Pedro Henrique Campos Dini (10772797)"
    ],
    "metadata": {}
   },
@@ -377,19 +377,6 @@
   {
    "cell_type": "markdown",
    "source": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "# pedro\r\n",
-    "## hello\r\n",
-    "\r\n",
-    "hello \r\n",
-    "- oi\r\n",
-    "\r\n",
-    "$$ \\alpha f_{oi} = 9 $$"
-   ],
    "metadata": {}
   }
  ],
