--- a/lab1/lab1.ipynb
+++ b/lab1/lab1.ipynb
@@ -751,7 +751,17 @@
     "Portanto, é de se esperar que o experimento reflita o comportamento descrito, de modo que a frequência do primeiro pico de amplitude ocorra na mesma frequência de rotação do motor, e os outros picos em frequências múltiplas inteiras deste valor.\r\n",
     "Sendo assim, a frequência de medida para o primeiro pico ($19Hz$), indica que a rotação do motor e as forças primárias é de 1140 rpm,e a frequência medida no terceiro pico ($38Hz$) respresenta as forças secundárias.\r\n",
     "\r\n",
-    "A origem do segundo pico já trás maior dificuldade à interpretação. Essa vibração pode ter sua origem, talvez, da velocidade de rotação da ventoinha, que refrigera o motor. \r\n",
+    "A origem do segundo pico já trás maior dificuldade à interpretação. Essa vibração pode ter sua origem, talvez, da velocidade de rotação da ventoinha, que refrigera o motor. Para investigar essa hipótese, os diametros das polias do que transmitem potência do motor para a ventoinha foram medidas:\r\n",
+    "\r\n",
+    "•   $  D_{motor} = 165mm$\r\n",
+    "•\t$ D_{ventoinha} = 110mm$\r\n",
+    "\r\n",
+    "Assim podemos concluir que a relação de velocidades é:\r\n",
+    "\r\n",
+    "$$\\frac{N_{ventoinha}}{N_{motor}} = \\frac{D_{motor}}{D_{ventoinha}} = 165/100 = 1,5$$\r\n",
+    "\r\n",
+    "Ou seja, a frequência de rotação da ventoinha é 1,5x maior que a rotação do motor, ou seja $19 \\cdot 1,5 = 28,5Hz$. \r\n",
+    "Assim, conclui-se que o segundo pico é resultado da rotação da ventoinha do motor.\r\n",
     "\r\n",
     "Fontes: https://what-when-how.com/automobile/engine-balance-automobile/"
    ],
