--- a/lab2/lab_2.ipynb
+++ b/lab2/lab_2.ipynb
@@ -350,6 +350,44 @@
    "metadata": {}
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "source": [
+    "from sympy import *\r\n",
+    "import numpy as np\r\n",
+    "m, g, w_y, w_x, = symbols('m g w_y w_x')\r\n",
+    "\r\n",
+    "\r\n",
+    "# Jc_yy = m*g**2 * (1/(w_y**2 * w_x**2)-1/w_y**4)\r\n",
+    "\r\n",
+    "Jc_yy = m*g**2/w_y**4 * (w_y**2/w_x**2 - 1)\r\n",
+    "\r\n",
+    "dif_m = diff(Jc_yy, m)\r\n",
+    "dif_w_y = diff(Jc_yy, w_y)\r\n",
+    "dif_w_x = diff(Jc_yy, w_x)\r\n",
+    "\r\n",
+    "sigma_m = 0.001\r\n",
+    "sigma_w_y = 0.001\r\n",
+    "sigma_w_x = 0.001\r\n",
+    "\r\n",
+    "sigma = dif_m**2*sigma_m**2 + dif_w_x**2*sigma_w_x**2 + dif_w_y**2*sigma_w_y**2\r\n",
+    "\r\n",
+    "sigma_ = sigma.subs(m,0.141).subs(g,9.81).subs(w_x,0.5967*2*np.pi).subs(w_y,0.58068*np.pi)\r\n",
+    "\r\n",
+    "pprint(sigma_)"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "4.96189330528303e-5\n"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "### **2d)** Mudando a suspensão da direção *x* para a direção *y*, repetir o experimento para determinar o $J_{Cxx}$."
@@ -547,7 +585,7 @@
    "display_name": "Python 3.9.6 64-bit"
   },
   "interpreter": {
-   "hash": "b0d0f07027c1e4d10a78d7755e5394d56d061bc0638b1e8d30da67c7ece9e9c3"
+   "hash": "63fd5069d213b44bf678585dea6b12cceca9941eaf7f819626cde1f2670de90d"
   }
  },
  "nbformat": 4,
