--- a/lab2/lab_2.ipynb
+++ b/lab2/lab_2.ipynb
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 2,
    "source": [
     "import pandas as pd\r\n",
     "import numpy as np\r\n",
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 3,
    "source": [
     "df = pd.read_csv(\"lab2q2a1-combinado-v2.csv\") \r\n",
     "\r\n",
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 4,
    "source": [
     "m = 0.141\r\n",
     "g= 9.79\r\n",
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 5,
    "source": [
     "df = pd.read_csv(\"lab2q2a1-x-v2.csv\") \r\n",
     "\r\n",
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 6,
    "source": [
     "df = pd.read_csv(\"lab2q2a1-y-v2.csv\") \r\n",
     "\r\n",
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 7,
    "source": [
     "m = 0.141\r\n",
     "g= 9.79\r\n",
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 8,
    "source": [
     "from sympy import *\r\n",
     "import numpy as np\r\n",
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 9,
    "source": [
     "df = pd.read_csv(\"lab2q2a2-x.csv\") \r\n",
     "\r\n",
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 10,
    "source": [
     "df = pd.read_csv(\"lab2q2a2-y.csv\") \r\n",
     "\r\n",
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 11,
    "source": [
     "m = 0.141\r\n",
     "g= 9.79\r\n",
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 12,
    "source": [
     "df = pd.read_csv(\"lab2q4a.csv\") \r\n",
     "\r\n",
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 13,
    "source": [
     "df = pd.read_csv(\"lab2q4b.csv\") \r\n",
     "\r\n",
@@ -997,7 +997,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 14,
    "source": [
     "df = pd.read_csv(\"lab2q4c.csv\") \r\n",
     "\r\n",
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 15,
    "source": [
     "m = 0.141\r\n",
     "R= 0.042\r\n",
@@ -1092,53 +1092,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 16,
    "source": [
     "df = pd.read_csv(\"lab2q4d.csv\") \r\n",
     "\r\n",
     "df.plot(x=\"Time (s)\", y=[\"Linear Acceleration x (m/s^2)\",\"Linear Acceleration y (m/s^2)\",\"Linear Acceleration z (m/s^2)\"], kind=\"line\")\r\n",
     "plt.xticks(range(0, 20, 2))\r\n",
     "plt.grid()\r\n",
-    "plt.show()\r\n",
-    "\r\n",
-    "t = df['Time (s)'].to_list()\r\n",
-    "x = df['Linear Acceleration x (m/s^2)'].to_list()\r\n",
-    "y = df['Linear Acceleration y (m/s^2)'].to_list()\r\n",
-    "z = df['Linear Acceleration z (m/s^2)'].to_list()\r\n",
-    "\r\n",
-    "t_inicial = 6\r\n",
-    "N_repeticoes = 10\r\n",
-    "\r\n",
-    "n_passagens = 0 \r\n",
-    "\r\n",
-    "for i in range(len(t)-10):\r\n",
-    "    if t[i] > t_inicial:\r\n",
-    "        if x[i]>= 0 and x[i-1]<0 :\r\n",
-    "            if n_passagens == 0 :\r\n",
-    "                t_1 = t[i]\r\n",
-    "            if n_passagens == N_repeticoes :\r\n",
-    "                t_n = t[i]\r\n",
-    "            n_passagens += 1\r\n",
-    "        \r\n",
-    "print(\"f_x:\", (t_n-t_1)/N_repeticoes)\r\n",
-    "print(\"t inicio\", t_1, \"t final\", t_n)\r\n",
-    "\r\n",
-    "t_inicial = 6\r\n",
-    "N_repeticoes = 7\r\n",
-    "\r\n",
-    "n_passagens = 0 \r\n",
-    "\r\n",
-    "for i in range(len(t)-10):\r\n",
-    "    if t[i] > t_inicial:\r\n",
-    "        if z[i]>= 0 and z[i-1]<0 :\r\n",
-    "            if n_passagens == 0 :\r\n",
-    "                t_1 = t[i]\r\n",
-    "            if n_passagens == N_repeticoes :\r\n",
-    "                t_n = t[i]\r\n",
-    "            n_passagens += 1\r\n",
-    "        \r\n",
-    "print(\"f_z:\", 2*(t_n-t_1)/N_repeticoes)\r\n",
-    "print(\"t inicio\", t_1, \"t final\", t_n)"
+    "plt.show()"
    ],
    "outputs": [
     {
@@ -1152,16 +1113,6 @@
      "metadata": {
       "needs_background": "light"
      }
-    },
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "f_x: 1.0109919001999998\n",
-      "t inicio 6.337524978 t final 16.44744398\n",
-      "f_z: 1.0114114285714286\n",
-      "t inicio 6.417251978 t final 9.957191978\n"
-     ]
     }
    ],
    "metadata": {}
@@ -1177,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 17,
    "source": [
     "from scipy import signal\r\n",
     "from scipy.fft import fft, fftshift, fftfreq\r\n",
